--- a/Release/makefile
+++ b/Release/makefile
@@ -50,6 +50,9 @@ default.size.stdout \
 OBJDUMP_LIST += \
 ina219.list \
 
+OBJCOPY_HEX += \
+ina219.hex \
+
 OBJCOPY_BIN += \
 ina219.bin \
 
@@ -62,7 +65,7 @@ main-build: ina219.elf secondary-outputs
 
 # Tool invocations
 ina219.elf: $(OBJS) $(USER_OBJS) C:\Users\Dmitriy\STM32CubeIDE\workspace_1.4.0\ina219\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ina219.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Dmitriy\STM32CubeIDE\workspace_1.4.0\ina219\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ina219.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "ina219.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Dmitriy\STM32CubeIDE\workspace_1.4.0\ina219\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ina219.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -76,6 +79,11 @@ ina219.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+ina219.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "ina219.hex"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 ina219.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "ina219.bin"
 	@echo 'Finished building: $@'
@@ -83,10 +91,10 @@ ina219.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 
 # Other Targets
 clean:
-	-$(RM) $(SIZE_OUTPUT)$(OBJDUMP_LIST)$(EXECUTABLES)$(OBJS)$(S_DEPS)$(S_UPPER_DEPS)$(C_DEPS)$(OBJCOPY_BIN) ina219.elf
+	-$(RM) $(OBJCOPY_HEX)$(SIZE_OUTPUT)$(OBJDUMP_LIST)$(EXECUTABLES)$(OBJS)$(S_DEPS)$(S_UPPER_DEPS)$(C_DEPS)$(OBJCOPY_BIN) ina219.elf
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN)
 
 fail-specified-linker-script-missing:
 	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
